# NYXFINCORE

./: .env.production.example  .gitignore  .vercelignore  FINAI_TECHNICAL_ARCHITECTURE.md  FRONTEND_REBUILD_SPEC.md  FinAI_Platform_v7.html  docker-compose.yml  vercel.json
backend/: ## Chat Customization Diagnostics.md  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  CUsersNinoDownloadsFinAI_Backend_3backendmr_result.json  DEMO_DATA_REQUIREMENTS.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FinAI.bat  FinAI.vbs  GETTING_STARTED.md  GITHUB_SETUP.md  LOCAL_DEV.md  LOCAL_DEV_COMPLETE.md  LOCAL_DEV_SETUP.md  NEON_SETUP.md  NYX_CORE_FINAI_FORENSIC_AUDIT.md  NYX_Core_90Day_Remediation_Plan.docx  NYX_Core_90Day_Remediation_Plan_PART1.docx  NYX_Core_90Day_Remediation_Plan_PART2.docx  NYX_Core_90Day_Remediation_Plan_PART3.docx  NYX_Core_Atomic_Audit.docx  NYX_Core_Audit_Report.docx  NYX_Core_FinAI_Pitch_Deck.pptx  NYX_Core_Forensic_Audit_Report.docx  NYX_FINAI_AUDIT_REPORT.md  NYX_FINAI_FINAL_CLASSIFICATION.md  NYX_FINAI_REVISED_AUDIT.md  NYX_FinAI_Audit_Report.docx  NYX_FinAI_Forensic_Audit_v3.docx  NYX_FinAI_Forensic_Audit_v4.docx  NYX_FinAI_Full_Audit_Report.docx  ONBOARDING.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  QUICK_DEV_START.md  README.md  START_FINAI.bat  (+77 more)
backend/src-tauri/: Cargo.toml  tauri.conf.json
backend/src-tauri/src/: lib.rs  main.rs
desktop/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  nginx.conf  package-lock.json  package.json  start-dev.cjs  ts_errors.txt  ts_errors_final.txt  ts_errors_utf8.txt  (+1 more)
(+501 files in other folders)
